--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title></title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     </header>
     <section class="hero"></section>
     <section class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt=""/>
             <h2>Search Engine Optimization</h2>
             <p>
